# IEEE754

./: .gitignore  Cargo.toml  README.md
src/: helper.rs  lib.rs
src/ieee754/: ieee754_32bit.rs  ieee754_64bit.rs  mod.rs  validation.rs
